--- a/studio-client/pom.xml
+++ b/studio-client/pom.xml
@@ -7,7 +7,8 @@
   <parent>
     <artifactId>studio-client.blueprint-parent</artifactId>
     <groupId>com.coremedia.blueprint</groupId>
-    <version>1-SNAPSHOT</version>
+    <version>9999.9</version>
+    <relativePath>../../../../../apps/studio-client/blueprint/modules/extensions/pom.xml</relativePath>
   </parent>
 
   <groupId>com.coremedia.blueprint.contenthub</groupId>
