--- a/studio-client/pom.xml
+++ b/studio-client/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>studio-client.blueprint-parent</artifactId>
     <groupId>com.coremedia.blueprint</groupId>
+    <artifactId>studio-client.extensions</artifactId>
     <version>9999.9</version>
     <relativePath>../../../../../apps/studio-client/blueprint/modules/extensions/pom.xml</relativePath>
   </parent>
