--- a/studio-server/pom.xml
+++ b/studio-server/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>com.coremedia.blueprint</groupId>
-    <artifactId>studio-server.blueprint-parent</artifactId>
+    <artifactId>studio-server.extensions</artifactId>
     <version>9999.9</version>
     <relativePath>../../../../../apps/studio-server/blueprint/modules/extensions/pom.xml</relativePath>
   </parent>
